# masters-thesis-project

./: .gitignore  README.md  debug-attention.py  devenv.nix  download_model.py  log_collector.py  manual.py  profiler.py  pyproject.toml  requirements.txt  run_manual_sweep  run_manual_sweep.py  run_manual_sweep.sh  run_sweeps.sh  train.py
conf/: train.yaml
conf/hydra/: logging.yaml
conf/model/: cnn_extensive.yaml  main.yaml  transformer.yaml  transformer_attention_sink.yaml  transformer_attention_sink_layer.yaml  transformer_attention_sink_layer_adamw.yaml  transformer_extensive.yaml  transformer_no_softmax.yaml  transformer_sigmoid.yaml  transformer_sparse.yaml  transformer_sparse_ent.yaml  unet.yaml  unet_extensive.yaml
conf/model/pipeline/: default.yaml
conf/model_download/: bumbling-sweep-23.yaml  divine-sweep-43.yaml  fearless-sweep-22.yaml  jolly-forest-1320.yaml  serene-sweep-11.yaml
conf/sweep/: local_minima_escape.yaml  sweep_transformer.yaml  sweep_transformer_adamw.yaml  sweep_unet.yaml  transformer.yaml  unet.yaml
conf/wandb/: train.yaml
model-data/: results_comb_classic.md  results_comb_classic_sin1d.md  results_comb_classic_sin2d.md  results_comb_classic_zero_self.md  results_comb_sparse-sparsity_study.md  results_comb_sparse.md  results_comb_sparse_05.md  results_comb_sparse_sin1d.md  results_comb_sparse_sin2d.md  results_comb_sparse_zero_self.md  results_mapping.md  results_sep_classic.md  results_sep_sparse.md  results_unet.md
notebooks/: architecture.ipynb  eta_debug.ipynb  focal_loss.ipynb  minigrid.ipynb  norm.ipynb  pdf.ipynb  scheduler.ipynb  test.ipynb
plots/: bar_plot_env_comparison.py  bar_plots.py  line_plots.py
scripts/: bar_plot_env_comparison.py  bar_plot_eta.py  bar_plot_perc_comparison.py  download_model.py  line_plots.py  list_results.py  log_collector.py  manual.py  result_collector.py  stat_significant.py
src/: pipeline.py
src/config/: train_config.py  wandb_config.py
src/framework/: caching.py  core.py  logging.py  pipeline.py  training.py  training_block.py  transformation_block.py  transforming.py
src/framework/trainers/: _custom_data_parallel.py  data_parallel.py  torch_trainer.py
src/framework/trainers/utils/: __init__.py
src/modules/environment/: gymnasium.py  minigrid_builder.py  minigrid_sampler_exhaustive.py  minigrid_sampler_exhaustive_mapping.py  minigrid_sampler_exhaustive_split.py  minigrid_sampler_extensive.py  minigrid_sampler_extensive_split.py  minigrid_sampler_random.py  minigrid_wrappers.py
src/modules/scoring/: data_transform.py  minigrid_accuracy.py  minigrid_attention_eval.py  minigrid_environments.py  minigrid_heatmap.py  minigrid_heatmap_new.py  minigrid_prediction_reshape.py  minigrid_sample_eval_image.py  minigrid_sample_eval_text.py  minigrid_save_data.py  minigrid_scorer.py  pdf_file_writer.py  scorer.py
src/modules/training/: accuracy.py  example_training_block.py  loss.py  loss_new.py  main_dataset.py  main_trainer.py  torch_trainer.py
src/modules/training/datasets/: autoregressive_dataset.py  autoregressive_token_dataset.py  utils.py  (+4 more)
src/modules/transformation/: example_transformation_block.py
src/setup/: setup_pipeline.py  setup_runtime_args.py  setup_wandb.py
src/typing/: minigrid_objects.py  pipeline_objects.py
src/utils/: functools.py  lock.py  set_torch_seed.py
tests/: conftest.py  constants.py
tests/modules/environment/: test_gymnasium.py
tests/modules/training/: test_dataset.py  test_simple_dataset.py  test_token_dataset.py  test_two_d_dataset.py
(+30 files in other folders)
