[tool.poetry]
name = "thesis project"
version = "0.1.0"
description = ""
authors = ["Ariel Ebersberger <ariel@ebersberger.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
torch = "^2.4.1"
minigrid = "^2.3.1"
wandb = "^0.18.3"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
coloredlogs = "^15.0.1"
tqdm = "^4.66.5"
joblib = "^1.4.2"
annotated-types = "^0.7.0"
timm = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
