[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "thesis project"
version = "0.1.0"
description = ""
authors = ["Ariel Ebersberger <ariel@ebersberger.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# minigrid = "^2.3.1"
minigrid = "^3.0.0"
wandb = "^0.19.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
coloredlogs = "^15.0.1"
tqdm = "^4.66.5"
joblib = "^1.4.2"
annotated-types = "^0.7.0"
timm = "^1.0.11"
torch = { url = "https://download.pytorch.org/whl/rocm6.2/torch-2.5.1%2Brocm6.2-cp311-cp311-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/rocm6.2/torchvision-0.20.1%2Brocm6.2-cp311-cp311-linux_x86_64.whl"}
pytorch-triton-rocm = { url = "https://download.pytorch.org/whl/pytorch_triton_rocm-3.1.0-cp311-cp311-linux_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
jupyter = "^1.1.1"
ruff = "^0.8.2"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:wandb.*",
    "ignore::DeprecationWarning:pygame.*"
]